# mobile-sdk

./: .gitignore  CMakeLists.txt  LICENSE  README.md  VCPKG_BASELINE  appveyor.yml  build_and_publish_android_docker.bash  build_ios.bash  main.cpp  qtdeclarative-MacOS-MacOS_10_13-Clang-Android-Android_ANY-Multi.7z  qttools-MacOS-MacOS_10_13-Clang-Android-Android_ANY-Multi.7z  qttranslations-MacOS-MacOS_10_13-Clang-Android-Android_ANY-Multi.7z  vcpkg.json  versions.conf  versions.py
.github/workflows/: android.yml  ios.yml  linux.yml  mac.yml  mac_arm64.yml  win.yml
android/: Dockerfile  android.md  config.conf.default  config_docker.conf  distribute.sh  extract-qt-installer.sh
android/recipes/curl/: recipe.sh
android/recipes/exiv2/: recipe.sh
android/recipes/expat/: recipe.sh
android/recipes/freexl/: recipe.sh
android/recipes/gdal/: recipe.sh
android/recipes/geodiff/: FindSQLite3.cmake  recipe.sh
android/recipes/geos/: recipe.sh
android/recipes/iconv/: recipe.sh
android/recipes/jpeg/: recipe.sh
android/recipes/libpng/: recipe.sh
android/recipes/libspatialindex/: recipe.sh
android/recipes/libspatialite/: recipe.sh
android/recipes/libtasn1/: recipe.sh
android/recipes/libtiff/: recipe.sh
android/recipes/libzip/: recipe.sh
android/recipes/openssl/: recipe.sh
android/recipes/postgresql/: recipe.sh
android/recipes/proj/: recipe.sh
android/recipes/protobuf/: recipe.sh
android/recipes/qca/: recipe.sh
android/recipes/qgis/: recipe.sh
android/recipes/qtkeychain/: recipe.sh
android/recipes/sqlite3/: recipe.sh
android/recipes/webp/: recipe.sh
android/recipes/zlib/: recipe.sh
android/recipes/zxing/: recipe.sh
ios/: config.conf.default  config_rel.conf  create_package.bash  distribute.sh  ios.md
ios/recipes/curl/: recipe.sh
ios/recipes/exiv2/: recipe.sh
ios/recipes/expat/: recipe.sh
ios/recipes/freexl/: recipe.sh
ios/recipes/gdal/: recipe.sh  sqlite_ext.patch
ios/recipes/geodiff/: recipe.sh
ios/recipes/geos/: recipe.sh
ios/recipes/gsl/: recipe.sh
ios/recipes/iconv/: recipe.sh
ios/recipes/jpeg/: recipe.sh
ios/recipes/libspatialindex/: recipe.sh
ios/recipes/libspatialite/: recipe.sh
ios/recipes/libtasn1/: recipe.sh
ios/recipes/libtiff/: recipe.sh
ios/recipes/libzip/: recipe.sh
ios/recipes/poly2tri/: recipe.sh
ios/recipes/postgresql/: recipe.sh
ios/recipes/proj/: recipe.sh
ios/recipes/protobuf/: recipe.sh
ios/recipes/qca/: recipe.sh
ios/recipes/qgis/: recipe.sh
ios/recipes/qtkeychain/: recipe.sh
ios/recipes/qtlocation/: recipe.sh
ios/recipes/sqlite3/: recipe.sh
ios/recipes/webp/: recipe.sh
ios/recipes/zxing/: recipe.sh
ios/tools/: ios.toolchain.cmake
linux/: config.conf  config.conf.default  distribute.sh
linux/recipes/gdal/: recipe.sh
linux/recipes/geodiff/: recipe.sh
linux/recipes/libspatialite/: recipe.sh
linux/recipes/proj/: recipe.sh
linux/recipes/qca/: recipe.sh
linux/recipes/qgis/: recipe.sh
linux/recipes/qtkeychain/: recipe.sh
linux/recipes/zxing/: recipe.sh
linux/tools/: depsort.py
mac/: config.conf.default  distribute.sh  mac.md  package.bash
mac/recipes/: geodiff.tbz
mac/recipes/curl/: recipe.sh
mac/recipes/exiv2/: recipe.sh
mac/recipes/expat/: recipe.sh
mac/recipes/freexl/: recipe.sh
mac/recipes/gdal/: dump_png_symbols.sh  recipe.sh
mac/recipes/geodiff/: recipe.sh
mac/recipes/geos/: recipe.sh
mac/recipes/jpeg/: recipe.sh
mac/recipes/libspatialindex/: recipe.sh
mac/recipes/libspatialite/: recipe.sh
mac/recipes/libtasn1/: recipe.sh
mac/recipes/libtiff/: recipe.sh
mac/recipes/libzip/: recipe.sh
mac/recipes/postgresql/: recipe.sh
mac/recipes/proj/: recipe.sh
mac/recipes/protobuf/: recipe.sh
mac/recipes/qca/: recipe.sh
mac/recipes/qgis/: recipe.sh
mac/recipes/qtkeychain/: recipe.sh
mac/recipes/qtlocation/: recipe.sh
mac/recipes/sqlite3/: recipe.sh
mac/recipes/webp/: recipe.sh
mac/recipes/zxing/: recipe.sh
scripts/: update_qt_version.bash  update_vcpkg_base.bash
tests/: vcpkg-configuration.json  vcpkg.json
vcpkg-overlay/ports/gdal/: dependency_win.cmake  portfile.cmake  vcpkg-cmake-wrapper.cmake  vcpkg.json
vcpkg-overlay/ports/geodiff/: portfile.cmake  usage  vcpkg-cmake-wrapper.cmake  vcpkg.json
vcpkg-overlay/ports/libjpeg-turbo/: CMakeLists.txt  jerror.patch  portfile.cmake  vcpkg-cmake-wrapper.cmake  vcpkg.json
vcpkg-overlay/ports/nu-book-zxing-cpp/: portfile.cmake  vcpkg.json
vcpkg-overlay/ports/openssl/: vcpkg.json
vcpkg-overlay/ports/proj/: portfile.cmake  vcpkg.json
vcpkg-overlay/ports/proj4/: vcpkg.json
vcpkg-overlay/ports/qca/: portfile.cmake  vcpkg.json
vcpkg-overlay/ports/qca-qt6/: 0003-fix-socket.patch  0004-fix-cxx17.patch  portfile.cmake  vcpkg.json
vcpkg-overlay/ports/qgis/: crssync.patch  portfile.cmake  vcpkg.json
vcpkg-overlay/ports/qgis-qt6/: awss3.patch  cmakelists.patch  geonode.patch  portfile.cmake  vcpkg.json  winextras.patch
vcpkg-overlay/ports/qt5-3d/: CONTROL
vcpkg-overlay/ports/qt5-activeqt/: CONTROL
vcpkg-overlay/ports/qt5-androidextras/: CONTROL
vcpkg-overlay/ports/qt5-canvas3d/: CONTROL
vcpkg-overlay/ports/qt5-charts/: CONTROL
vcpkg-overlay/ports/qt5-connectivity/: CONTROL
vcpkg-overlay/ports/qt5-datavis3d/: CONTROL
vcpkg-overlay/ports/qt5-declarative/: CONTROL
vcpkg-overlay/ports/qt5-doc/: CONTROL
vcpkg-overlay/ports/qt5-gamepad/: CONTROL
vcpkg-overlay/ports/qt5-graphicaleffects/: CONTROL
vcpkg-overlay/ports/qt5-imageformats/: CONTROL
vcpkg-overlay/ports/qt5-location/: CONTROL
vcpkg-overlay/ports/qt5-macextras/: CONTROL
vcpkg-overlay/ports/qt5-mqtt/: CONTROL
vcpkg-overlay/triplets/: arm-android.cmake  arm64-android.cmake  arm64-ios.cmake  arm64-osx.cmake  x64-linux.cmake  x64-osx.cmake  x64-windows.cmake
vcpkg-registry/versions/: baseline.json
vcpkg-test/: CMakeLists.txt  main.cpp  vcpkg.json
vcpkg-test/cmake/: FindQGIS.cmake
vcpkg-test/src/: input-sdk-main.cpp  input-sdk-sqlite3.cpp  input-sdk-test.hpp
win/: config.bat  config.bat.default  config.conf.default  distribute.bat  distribute.cmd  distribute.sh  win.md
(+104 files in other folders)
